--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.17.0
-pandas==1.3.3
-numpy==1.21.2
-matplotlib==3.4.3
-seaborn==0.11.2
-plotly==5.3.1
-scikit-learn==0.24.2
-altair==4.1.0
-pyarrow==5.0.0
+streamlit>=1.28.0
+pandas>=1.5.0
+numpy>=1.23.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+plotly>=5.13.0
+scikit-learn>=1.0.0
+altair>=4.2.0
+pyarrow>=11.0.0
