--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-streamlit>=1.28.0
-pandas>=1.5.0
-numpy>=1.23.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-plotly>=5.13.0
-scikit-learn>=1.0.0
-altair>=4.2.0
-pyarrow>=11.0.0
+streamlit==1.28.0
+pandas==2.1.1
+numpy==1.24.3
+matplotlib==3.7.2
+seaborn==0.12.2
+plotly==5.17.0
+scikit-learn==1.3.0
+altair==5.1.2
+pyarrow==13.0.0
+statsmodels==0.14.0
+scipy==1.11.3
+shap==0.43.0
