--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit==1.26.0
-pandas==1.5.3
-numpy==1.23.5
-matplotlib==3.7.1
-seaborn==0.12.2
-plotly==5.15.0
-scikit-learn==1.2.2
-altair==4.2.2
-pyarrow==12.0.1
-statsmodels==0.14.0
-scipy==1.10.1
-shap==0.42.0
+streamlit
+pandas
+numpy
+matplotlib
+seaborn
+plotly
+scikit-learn
+altair
+pyarrow
+statsmodels
+scipy
+shap
